# telegods_client

./: README.md  pyproject.toml
src/: app.css  app.py  client.py  widgets.py
